--- a/bonsai/pqBonsaiDsmPanel.ui
+++ b/bonsai/pqBonsaiDsmPanel.ui
@@ -31,9 +31,9 @@
        </widget>
       </item>
       <item row="0" column="0">
-       <widget class="QCheckBox" name="checkBox">
+       <widget class="QCheckBox" name="quicksync">
         <property name="text">
-         <string>CheckBox</string>
+         <string>QuickSync</string>
         </property>
        </widget>
       </item>
