--- a/bonsai/pqBonsaiDsmPanel.ui
+++ b/bonsai/pqBonsaiDsmPanel.ui
@@ -24,9 +24,9 @@
        <number>6</number>
       </property>
       <item row="3" column="0">
-       <widget class="QCheckBox" name="checkBox_2">
+       <widget class="QCheckBox" name="listening">
         <property name="text">
-         <string>CheckBox</string>
+         <string>Listening</string>
         </property>
        </widget>
       </item>
@@ -34,6 +34,9 @@
        <widget class="QCheckBox" name="quicksync">
         <property name="text">
          <string>QuickSync</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
@@ -52,6 +55,9 @@
            <number>1</number>
           </property>
           <property name="maximum">
+           <number>100</number>
+          </property>
+          <property name="value">
            <number>100</number>
           </property>
           <property name="orientation">
